# agent_workshop

./: README.md  pyproject.toml
notebooks/: langchain.ipynb  langgraph.ipynb  pydantic-ai.ipynb  smolagents.ipynb
