[tool.poetry]
name = "agent-workshop"
version = "0.1.0"
description = ""
authors = ["starminalush <alica154323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.4.2"
langchain = "^0.3.25"
openai = "^1.79.0"
arxiv = "^2.2.0"
langchain-community = "^0.3.24"
pypdf = "^5.5.0"
tiktoken = "^0.9.0"
faiss-cpu = "^1.11.0"
langchain-openai = "^0.3.17"
langgraph = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
